--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.15.0",
     "isomorphic-fetch": "^2.2.1",
+    "jeet": "^6.1.2",
     "normalize.css": "^4.0.0",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.2",
